Fix hero image paths and prepare for Cloudflare deployment - Fixed index.html hero image path to use assets/ folder - Removed duplicate image files from root directory - Added Cloudflare Pages configuration (_headers, _redirects) - Updated deployment documentation for Cloudflare hosting - All hero images now properly reference assets/ folder

--- a/rural.html
+++ b/rural.html
@@ -124,12 +124,14 @@
         </div>
     </div>
 
-    <!-- Service Hero Section -->
-    <section class="service-hero">
-        <img src="assets/Rural Sevier County Sunset.jpg" alt="A sunset over a rural county, representing rural services" class="hero-image">
+    <!-- Hero Section -->
+    <section class="hero hero-rural">
         <div class="container">
-            <h1>Mental Health Services for Rural Utah</h1>
-            <p>Bringing compassionate psychiatric care to Utah's rural communities</p>
+            <h1>Rural Mental Health Care for Utah Communities</h1>
+            <p class="lead">Specialized mental health care for rural Utah communities. Flexible scheduling, telehealth options, and understanding of rural challenges.</p>
+            <div class="hero-cta">
+                <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn">Schedule Consultation</a>
+            </div>
         </div>
     </section>
 
