--- a/staging/index.html
+++ b/staging/index.html
@@ -58,17 +58,9 @@
         </div>
     </header>
 
-    <!-- Search Bar -->
-    <div class="search-container">
-        <div class="search-bar">
-            <i class="fa fa-search"></i>
-            <input type="text" placeholder="Search..." id="universal-search">
-        </div>
-    </div>
-
     <!-- Hero Section -->
     <section class="hero">
-        <img src="index-hero.jpg" alt="Family playing in their backyard" class="hero-image">
+        <img src="assets/index-hero.jpg" alt="Family playing in their backyard" class="hero-image">
         <div class="container">
             <div class="hero-content">
                 <h1>Expert Psychiatric Care in Utah County</h1>
@@ -197,6 +189,7 @@
 
             <div class="footer-bottom">
                 <p>&copy; 2025 Allen Psychiatry. All Rights Reserved.</p>
+                <p style="font-size: 0.85em; font-style: italic; margin-top: 10px; color: #888;"><strong>IMPORTANT!</strong> All information presented in this website is intended for informational purposes only and not for the purpose of rendering medical advice. Statements made on this website have not been evaluated by the Food and Drug Administration. The information contained herein is not intended to diagnose, treat, cure or prevent any disease.</p>
             </div>
         </div>
     </footer>
