--- a/provo.html
+++ b/provo.html
@@ -68,34 +68,23 @@
         </div>
     </div>
 
-    <!-- Service Hero Section -->
-    <section class="service-hero" style="background-image: url('assets/Provo Office 1.jpg');">
+    <!-- Hero Section -->
+    <section class="hero hero-provo">
         <div class="container">
-            <h1>Expert Mental Health Services in Provo, UT</h1>
-            <p>Your path to wellness starts here, in the heart of Provo.</p>
+            <h1>Provo Office</h1>
+            <p class="lead">Visit our Provo office for in-person psychiatric care in a welcoming, comfortable environment.</p>
             <div class="hero-cta">
-                <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn">Schedule Now</a>
-                <a href="tel:3855041334" class="btn btn-secondary">Call (385) 504-1334</a>
+                <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn">Schedule In-Person Visit</a>
             </div>
         </div>
     </section>
 
-    <!-- Office Photos Section -->
-    <section class="office-photos">
-        <div class="container">
-            <div class="photo-grid">
-                <div class="photo-item">
-                    <img src="assets/Provo Office 1.jpg" alt="Welcoming Reception Area" class="placeholder-img">
-                </div>
-                <div class="photo-item">
-                    <img src="assets/Provo Office 2.jpg" alt="Comfortable Waiting Area" class="placeholder-img">
-                </div>
-                <div class="photo-item">
-                    <img src="assets/Provo Office 3.jpg" alt="Private Consultation Room" class="placeholder-img">
-                </div>
-            </div>
-        </div>
-    </section>
+    <!-- Office Photo Grid -->
+    <div class="office-photos">
+        <div class="office-photo"><img src="Provo Office 1.jpg" loading="lazy" alt="Allen Psychiatry Provo Office - Reception Area"></div>
+        <div class="office-photo"><img src="Provo Office 2.jpg" loading="lazy" alt="Allen Psychiatry Provo Office - Waiting Room"></div>
+        <div class="office-photo"><img src="Provo Office 3.jpg" loading="lazy" alt="Allen Psychiatry Provo Office - Consultation Room"></div>
+    </div>
 
     <!-- Service Details -->
     <section class="service-details">
