--- a/staging/provo.html
+++ b/staging/provo.html
@@ -68,14 +68,13 @@
         </div>
     </div>
 
-    <!-- Service Hero Section -->
-    <section class="service-hero" style="background-image: url('assets/Provo Office 1.jpg');">
+    <!-- Hero Section -->
+    <section class="hero hero-provo">
         <div class="container">
-            <h1>Expert Mental Health Services in Provo, UT</h1>
-            <p>Your path to wellness starts here, in the heart of Provo.</p>
+            <h1>Provo Office</h1>
+            <p class="lead">Visit our Provo office for in-person psychiatric care in a welcoming, comfortable environment.</p>
             <div class="hero-cta">
-                <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn">Schedule Now</a>
-                <a href="tel:3855041334" class="btn btn-secondary">Call (385) 504-1334</a>
+                <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn">Schedule In-Person Visit</a>
             </div>
         </div>
     </section>
@@ -315,6 +314,7 @@
 
             <div class="footer-bottom">
                 <p>&copy; 2025 Allen Psychiatry. All Rights Reserved.</p>
+                <p style="font-size: 0.85em; font-style: italic; margin-top: 10px; color: #888;"><strong>IMPORTANT!</strong> All information presented in this website is intended for informational purposes only and not for the purpose of rendering medical advice. Statements made on this website have not been evaluated by the Food and Drug Administration. The information contained herein is not intended to diagnose, treat, cure or prevent any disease.</p>
             </div>
         </div>
     </footer>
