Move staging files to root directory - Moved all website files from staging/ to root directory - Fixed hero image paths (now correctly reference assets/) - Added Cloudflare configuration files (_headers, _redirects) - Removed duplicate image files from root - All files now ready for direct deployment from root directory

--- a/rural.html
+++ b/rural.html
@@ -124,14 +124,12 @@
         </div>
     </div>
 
-    <!-- Hero Section -->
-    <section class="hero hero-rural">
+    <!-- Service Hero Section -->
+    <section class="service-hero">
+        <img src="assets/Rural Sevier County Sunset.jpg" alt="A sunset over a rural county, representing rural services" class="hero-image">
         <div class="container">
-            <h1>Rural Mental Health Care for Utah Communities</h1>
-            <p class="lead">Specialized mental health care for rural Utah communities. Flexible scheduling, telehealth options, and understanding of rural challenges.</p>
-            <div class="hero-cta">
-                <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn">Schedule Consultation</a>
-            </div>
+            <h1>Mental Health Services for Rural Utah</h1>
+            <p>Bringing compassionate psychiatric care to Utah's rural communities</p>
         </div>
     </section>
 
@@ -289,6 +287,7 @@
 
             <div class="footer-bottom">
                 <p>&copy; 2025 Allen Psychiatry. All Rights Reserved.</p>
+                <p style="font-size: 0.85em; font-style: italic; margin-top: 10px; color: #888;"><strong>IMPORTANT!</strong> All information presented in this website is intended for informational purposes only and not for the purpose of rendering medical advice. Statements made on this website have not been evaluated by the Food and Drug Administration. The information contained herein is not intended to diagnose, treat, cure or prevent any disease.</p>
             </div>
         </div>
     </footer>
