--- a/provo.html
+++ b/provo.html
@@ -79,12 +79,22 @@
         </div>
     </section>
 
-    <!-- Office Photo Grid -->
-    <div class="office-photos">
-        <div class="office-photo"><img src="Provo Office 1.jpg" loading="lazy" alt="Allen Psychiatry Provo Office - Reception Area"></div>
-        <div class="office-photo"><img src="Provo Office 2.jpg" loading="lazy" alt="Allen Psychiatry Provo Office - Waiting Room"></div>
-        <div class="office-photo"><img src="Provo Office 3.jpg" loading="lazy" alt="Allen Psychiatry Provo Office - Consultation Room"></div>
-    </div>
+    <!-- Office Photos Section -->
+    <section class="office-photos">
+        <div class="container">
+            <div class="photo-grid">
+                <div class="photo-item">
+                    <img src="assets/Provo Office 1.jpg" alt="Welcoming Reception Area" class="placeholder-img">
+                </div>
+                <div class="photo-item">
+                    <img src="assets/Provo Office 2.jpg" alt="Comfortable Waiting Area" class="placeholder-img">
+                </div>
+                <div class="photo-item">
+                    <img src="assets/Provo Office 3.jpg" alt="Private Consultation Room" class="placeholder-img">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Service Details -->
     <section class="service-details">
@@ -304,6 +314,7 @@
 
             <div class="footer-bottom">
                 <p>&copy; 2025 Allen Psychiatry. All Rights Reserved.</p>
+                <p style="font-size: 0.85em; font-style: italic; margin-top: 10px; color: #888;"><strong>IMPORTANT!</strong> All information presented in this website is intended for informational purposes only and not for the purpose of rendering medical advice. Statements made on this website have not been evaluated by the Food and Drug Administration. The information contained herein is not intended to diagnose, treat, cure or prevent any disease.</p>
             </div>
         </div>
     </footer>
