--- a/staging/adhd.html
+++ b/staging/adhd.html
@@ -226,8 +226,8 @@
     <section class="page-content">
         <div class="container">
             <div class="page-header">
-                <h1>Welcome to Allen Psychiatry, Utah's foremost healthcare provider dedicated to helping individuals with ADHD.</h1>
-                <p>We understand that ADHD can seem daunting, and we are here to provide comprehensive, personalized care that addresses all aspects of the disorder.</p>
+                <h2 style="font-size: 2rem; font-weight: 700; margin-bottom: 1rem;">Welcome to Allen Psychiatry, Utah's foremost healthcare provider dedicated to helping individuals with ADHD.</h2>
+                <p style="font-size: 1.25rem;">We understand that ADHD can seem daunting, and we are here to provide comprehensive, personalized care that addresses all aspects of the disorder.</p>
                 <p>If you or a loved one is suffering from ADHD, give our office a call today to learn how we can help you. Please call (385) 504-1334 or book an appointment online today. We are ready to find a solution for you.</p>
             </div>
             <div class="adhd-section">
