Fix SMS Privacy Policy modal, Provo page padding, and JS errors; ensure modal always appears on link click

--- a/anxiety.html
+++ b/anxiety.html
@@ -18,8 +18,8 @@
     <link rel="canonical" href="https://allenpsychiatry.net/anxiety.html">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link rel="apple-touch-icon" href="assets/favicon.png">
+    <!-- <link rel="icon" type="image/png" href="assets/favicon.png"> -->
+    <!-- <link rel="apple-touch-icon" href="assets/favicon.png"> -->
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -372,6 +372,9 @@
             <div class="footer-bottom">
                 <p>&copy; 2025 Allen Psychiatry. All Rights Reserved.</p>
                 <p style="font-size: 0.85em; font-style: italic; margin-top: 10px; color: #888;"><strong>IMPORTANT!</strong> All information presented in this website is intended for informational purposes only and not for the purpose of rendering medical advice. Statements made on this website have not been evaluated by the Food and Drug Administration. The information contained herein is not intended to diagnose, treat, cure or prevent any disease.</p>
+                <p style="margin-top: 15px; font-size: 0.9em;">
+                    <a href="#sms-privacy" style="color: var(--primary); text-decoration: none;">SMS Privacy Policy</a>
+                </p>
             </div>
         </div>
     </footer>
@@ -383,7 +386,9 @@
 
     <!-- Scripts -->
     <script src="script.js"></script>
-    <script src="navigation.js"></script>
+            <script src="navigation.js"></script>
     <script src="telehealth-modal.js"></script>
+    <script src="patient-portal-modal.js"></script>
+    <script src="sms-privacy-modal.js"></script>
 </body>
 </html> 
