--- a/staging/about.html
+++ b/staging/about.html
@@ -220,5 +220,6 @@
     </footer>
     <script src="navigation.js"></script>
     <script src="telehealth-modal.js"></script>
+    <script src="patient-portal-modal.js"></script>
   </body>
 </html> 
