--- a/404.html
+++ b/404.html
@@ -102,5 +102,8 @@
             });
         });
     </script>
+    <script src="navigation.js"></script>
+    <script src="telehealth-modal.js"></script>
+    <script src="patient-portal-modal.js"></script>
 </body>
 </html> 
