--- a/staging/depression.html
+++ b/staging/depression.html
@@ -390,5 +390,6 @@
     <script src="script.js"></script>
     <script src="navigation.js"></script>
     <script src="telehealth-modal.js"></script>
+    <script src="patient-portal-modal.js"></script>
 </body>
 </html> 
