--- a/staging/index.html
+++ b/staging/index.html
@@ -198,5 +198,6 @@
 
     <script src="navigation.js"></script>
     <script src="telehealth-modal.js"></script>
+    <script src="patient-portal-modal.js"></script>
 </body>
 </html> 
