--- a/staging/provo.html
+++ b/staging/provo.html
@@ -69,7 +69,7 @@
     </div>
 
     <!-- Hero Section -->
-    <section class="hero hero-provo">
+    <section class="hero hero-provo" style="background-image: url('assets/Provo Utah.jpg'); background-size: cover; background-position: center;">
         <div class="container">
             <h1>Provo Office</h1>
             <p class="lead">Visit our Provo office for in-person psychiatric care in a welcoming, comfortable environment.</p>
@@ -84,13 +84,13 @@
         <div class="container">
             <div class="photo-grid">
                 <div class="photo-item">
-                    <img src="assets/Provo Office 1.jpg" alt="Welcoming Reception Area" class="placeholder-img">
+                    <img src="assets/Provo Office 1.jpg" alt="Reception Area - Allen Psychiatry Provo" class="placeholder-img">
                 </div>
                 <div class="photo-item">
-                    <img src="assets/Provo Office 2.jpg" alt="Comfortable Waiting Area" class="placeholder-img">
+                    <img src="assets/Provo Office 2.jpg" alt="Waiting Area - Allen Psychiatry Provo" class="placeholder-img">
                 </div>
                 <div class="photo-item">
-                    <img src="assets/Provo Office 3.jpg" alt="Private Consultation Room" class="placeholder-img">
+                    <img src="assets/Provo Office 3.jpg" alt="Private Consultation Room - Allen Psychiatry Provo" class="placeholder-img">
                 </div>
             </div>
         </div>
@@ -131,20 +131,6 @@
             </div>
             <div class="learn-more-container">
                 <button class="btn btn-outline read-more-btn" data-target="detailedInfo" data-more-text="Learn More About Our Office" data-less-text="Show Less">Learn More About Our Office</button>
-            </div>
-        </div>
-    </section>
-
-    <!-- Additional Office Photos -->
-    <section class="office-photos secondary">
-        <div class="container">
-            <div class="photo-grid">
-                <div class="photo-item">
-                    <img src="assets/Provo Office 1.jpg" alt="Office Exterior" class="placeholder-img">
-                </div>
-                <div class="photo-item">
-                    <img src="assets/Provo Office 2.jpg" alt="Office Amenities" class="placeholder-img">
-                </div>
             </div>
         </div>
     </section>
@@ -324,5 +310,6 @@
     <script src="navigation.js"></script>
     <script src="read-more.js"></script>
     <script src="telehealth-modal.js"></script>
+    <script src="patient-portal-modal.js"></script>
 </body>
 </html> 
