--- a/staging/test.html
+++ b/staging/test.html
@@ -108,5 +108,6 @@
 
     <!-- Scripts -->
     <script src="script.js"></script>
+    <script src="patient-portal-modal.js"></script>
 </body>
 </html> 
