Declare index.html as gold copy; update README with gold copy policy

--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--
+  GOLD COPY: This is the authoritative version of index.html.
+  All future changes to the repo must be based on this file.
+  Do not overwrite or diverge from this file without explicit review.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
