--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="header-actions">
                     <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a>
-                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small">Schedule Now</a>
+                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small" target="_blank">Schedule Now</a>
                 </div>
             </div>
         </div>
@@ -111,7 +111,7 @@
                         <i class="fa fa-flask"></i>
                     </div>
                     <h3>Research & Academic Contributions</h3>
-                    <p>His commitment to advancing psychiatric care extends beyond clinical practice through his sleep-study research and his role as a member of the research team with Boeson, contributing to innovative approaches in mental health treatment.</p>
+                    <p>Dr. Allen has published research in peer-reviewed journals and continues to contribute to the advancement of psychiatric care through his sleep-study research and collaboration with the Boeson research team, developing innovative approaches in mental health treatment.</p>
                 </div>
 
                 <div class="about-card">
@@ -153,7 +153,7 @@
                 <div class="cta-content">
                     <h2>Ready to Take Your First Step?</h2>
                     <p>If you're ready to begin your journey toward mental wellness with Dr. Todd Allen, we're here to help. Schedule a consultation to learn more about how we can support you.</p>
-                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn">Schedule an Appointment</a>
+                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank">Schedule an Appointment</a>
                 </div>
             </div>
         </div>
@@ -189,7 +189,7 @@
                         <li><a href="index.html#services">Services</a></li>
                         <li><a href="provo.html">Provo Office</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a></li>
-                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients">Schedule Appointment</a></li>
+                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">Schedule Appointment</a></li>
                     </ul>
                 </div>
 
@@ -216,7 +216,7 @@
                 <p>&copy; 2025 Allen Psychiatry. All Rights Reserved.</p>
                 <p style="font-size: 0.85em; font-style: italic; margin-top: 10px; color: #888;"><strong>IMPORTANT!</strong> All information presented in this website is intended for informational purposes only and not for the purpose of rendering medical advice. Statements made on this website have not been evaluated by the Food and Drug Administration. The information contained herein is not intended to diagnose, treat, cure or prevent any disease.</p>
                 <p style="margin-top: 15px; font-size: 0.9em;">
-                    <a href="#sms-privacy" style="color: var(--primary); text-decoration: none;">SMS Privacy Policy</a>
+                    <a href="#sms-privacy" style="color: var(--primary); text-decoration: none;" onclick="showSmsPrivacyModal(); return false;">SMS Privacy Policy</a>
                 </p>
             </div>
         </div>
