--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="header-actions">
                     <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a>
-                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small">Schedule Now</a>
+                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small" target="_blank">Schedule Now</a>
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
             <div class="hero-content">
                 <h1>Expert Psychiatric Care in Utah County</h1>
                 <p>Compassionate, evidence-based mental health services for a brighter tomorrow.</p>
-                <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn">Schedule an Appointment</a>
+                <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank">Schedule an Appointment</a>
             </div>
         </div>
     </section>
@@ -133,7 +133,7 @@
                 <div class="cta-content">
                     <h2>Ready to Take Your First Step?</h2>
                     <p>Mental health care is a journey, and we're here to walk alongside you every step of the way. Contact us today to schedule a consultation and begin your path to wellness.</p>
-                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn">Schedule an Appointment</a>
+                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank">Schedule an Appointment</a>
                 </div>
             </div>
         </div>
@@ -169,7 +169,7 @@
                         <li><a href="index.html#services">Services</a></li>
                         <li><a href="provo.html">Provo Office</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a></li>
-                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients">Schedule Appointment</a></li>
+                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">Schedule Appointment</a></li>
                     </ul>
                 </div>
 
@@ -196,7 +196,7 @@
                 <p>&copy; 2025 Allen Psychiatry. All Rights Reserved.</p>
                 <p style="font-size: 0.85em; font-style: italic; margin-top: 10px; color: #888;"><strong>IMPORTANT!</strong> All information presented in this website is intended for informational purposes only and not for the purpose of rendering medical advice. Statements made on this website have not been evaluated by the Food and Drug Administration. The information contained herein is not intended to diagnose, treat, cure or prevent any disease.</p>
                 <p style="margin-top: 15px; font-size: 0.9em;">
-                    <a href="#sms-privacy" style="color: var(--primary); text-decoration: none;">SMS Privacy Policy</a>
+                    <a href="#sms-privacy" style="color: var(--primary); text-decoration: none;" onclick="showSmsPrivacyModal(); return false;">SMS Privacy Policy</a>
                 </p>
             </div>
         </div>
