--- a/provo.html
+++ b/provo.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="header-actions">
                     <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a>
-                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small">Schedule Now</a>
+                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small" target="_blank">Schedule Now</a>
                 </div>
             </div>
         </div>
@@ -74,7 +74,7 @@
             <h1>Provo Office</h1>
             <p class="lead">Visit our Provo office for in-person psychiatric care in a welcoming, comfortable environment.</p>
             <div class="hero-cta">
-                <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn">Schedule In-Person Visit</a>
+                <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank">Schedule In-Person Visit</a>
             </div>
         </div>
     </section>
@@ -217,8 +217,8 @@
                     <div class="info-section">
                         <h3>Office Hours</h3>
                         <ul class="hours-list">
-                            <li><strong>Monday - Friday:</strong> 8:00 AM - 5:00 PM</li>
-                            <li><strong>Saturday:</strong> By appointment only</li>
+                            <li><strong>Monday, Wednesday - Friday:</strong> 10:00 AM - 6:00 PM</li>
+                            <li><strong>Tuesday:</strong> 11:00 AM - 6:00 PM</li>
                             <li><strong>Sunday:</strong> Closed</li>
                         </ul>
                         <p class="hours-note">We offer flexible scheduling options to accommodate your needs, including early morning and evening appointments when available.</p>
@@ -240,7 +240,7 @@
                     <h3>Schedule an appointment today!</h3>
                     <p>Please call (385) 504-1334 to schedule an appointment or book an appointment online by clicking on the Schedule Now button.</p>
                     <div class="cta-buttons">
-                        <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn">Schedule Now</a>
+                        <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank">Schedule Now</a>
                         <a href="tel:3855041334" class="btn btn-secondary">Call (385) 504-1334</a>
                     </div>
                 </div>
@@ -254,7 +254,7 @@
             <div class="cta-content">
                 <h2>Ready to Take Your First Step?</h2>
                 <p>If you're ready to begin your journey toward mental wellness in our welcoming Provo office, Dr. Allen is here to help. Schedule a consultation to learn more about how we can support you.</p>
-                <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn">Schedule an Appointment</a>
+                <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank">Schedule an Appointment</a>
             </div>
         </div>
     </section>
@@ -289,7 +289,7 @@
                         <li><a href="index.html#services">Services</a></li>
                         <li><a href="provo.html">Provo Office</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a></li>
-                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients">Schedule Appointment</a></li>
+                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">Schedule Appointment</a></li>
                     </ul>
                 </div>
 
@@ -316,7 +316,7 @@
                 <p>&copy; 2025 Allen Psychiatry. All Rights Reserved.</p>
                 <p style="font-size: 0.85em; font-style: italic; margin-top: 10px; color: #888;"><strong>IMPORTANT!</strong> All information presented in this website is intended for informational purposes only and not for the purpose of rendering medical advice. Statements made on this website have not been evaluated by the Food and Drug Administration. The information contained herein is not intended to diagnose, treat, cure or prevent any disease.</p>
                 <p style="margin-top: 15px; font-size: 0.9em;">
-                    <a href="#sms-privacy" style="color: var(--primary); text-decoration: none;">SMS Privacy Policy</a>
+                    <a href="#sms-privacy" style="color: var(--primary); text-decoration: none;" onclick="showSmsPrivacyModal(); return false;">SMS Privacy Policy</a>
                 </p>
             </div>
         </div>
