Show all office information by default - remove hidden content and close button

--- a/provo.html
+++ b/provo.html
@@ -146,11 +146,10 @@
         </div>
     </section>
 
-    <!-- Detailed Information Section (Hidden by default) -->
-    <section class="service-details detailed-info" id="detailedInfo" style="display: none;">
+    <!-- Detailed Information Section -->
+    <section class="service-details detailed-info" id="detailedInfo">
         <div class="container">
             <div class="info-content">
-                <button class="close-btn" data-target="detailedInfo">×</button>
                 
                 <div class="page-header">
                     <h1>Our Provo Office</h1>
