Fix Provo Office layout: tiles in one row, move office photos after tiles section

--- a/provo.html
+++ b/provo.html
@@ -79,23 +79,6 @@
         </div>
     </section>
 
-    <!-- Office Photos Section -->
-    <section class="office-photos">
-        <div class="container">
-            <div class="photo-grid">
-                <div class="photo-item">
-                    <img src="assets/Provo Office 1.jpg" alt="Welcoming Reception Area" class="placeholder-img">
-                </div>
-                <div class="photo-item">
-                    <img src="assets/Provo Office 2.jpg" alt="Comfortable Waiting Area" class="placeholder-img">
-                </div>
-                <div class="photo-item">
-                    <img src="assets/Provo Office 3.jpg" alt="Private Consultation Room" class="placeholder-img">
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Service Details -->
     <section class="service-details">
         <div class="container">
@@ -132,15 +115,18 @@
         </div>
     </section>
 
-    <!-- Additional Office Photos -->
+    <!-- Office Photos -->
     <section class="office-photos secondary">
         <div class="container">
             <div class="photo-grid">
                 <div class="photo-item">
-                    <img src="assets/Provo Office 1.jpg" alt="Office Exterior" class="placeholder-img">
+                    <img src="assets/Provo Office 1.jpg" alt="Welcoming Reception Area" class="placeholder-img">
                 </div>
                 <div class="photo-item">
-                    <img src="assets/Provo Office 2.jpg" alt="Office Amenities" class="placeholder-img">
+                    <img src="assets/Provo Office 2.jpg" alt="Comfortable Waiting Area" class="placeholder-img">
+                </div>
+                <div class="photo-item">
+                    <img src="assets/Provo Office 3.jpg" alt="Private Consultation Room" class="placeholder-img">
                 </div>
             </div>
         </div>
