Update all TeleHealth and Patient Portal links to open in new windows for easy return to main site

--- a/adhd.html
+++ b/adhd.html
@@ -162,7 +162,7 @@
                     <div>3311 North University Ave, Ste 275, Provo, UT 84604</div>
                 </div>
                 <div class="header-actions">
-                    <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a>
+                    <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a>
                     <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small" target="_blank">Schedule Now</a>
                 </div>
             </div>
@@ -190,7 +190,7 @@
                         <li><a href="rural.html">Rural Services</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="telehealth.html">TeleHealth</a></li>
-                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a></li>
+                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
                     </ul>
                 </nav>
                 <div class="hamburger-menu">
@@ -229,7 +229,7 @@
                         <p>Welcome to Allen Psychiatry in Provo, UT, your foremost healthcare provider dedicated to helping individuals with ADHD. We understand that ADHD can seem daunting, and we are here to provide comprehensive, personalized care that addresses all aspects of the disorder.</p>
                     </div>
                     
-                    <p>If you or a loved one is suffering from ADHD, give our office a call today to learn how we can help you. Please call <strong>(385) 504-1334</strong> or <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients">book an appointment online</a> today. We are ready to find a solution for you.</p>
+                    <p>If you or a loved one is suffering from ADHD, give our office a call today to learn how we can help you. Please call <strong>(385) 504-1334</strong> or <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">book an appointment online</a> today. We are ready to find a solution for you.</p>
                     
                     <h2>Understanding ADHD</h2>
                     <h3>What is ADHD?</h3>
@@ -331,7 +331,7 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="index.html#services">Services</a></li>
                         <li><a href="provo.html">Provo Office</a></li>
-                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a></li>
+                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">Schedule Appointment</a></li>
                     </ul>
                 </div>
