--- a/anxiety.html
+++ b/anxiety.html
@@ -162,7 +162,7 @@
                     <div>3311 North University Ave, Ste 275, Provo, UT 84604</div>
                 </div>
                 <div class="header-actions">
-                    <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a>
+                    <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a>
                     <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small" target="_blank">Schedule Now</a>
                 </div>
             </div>
@@ -190,7 +190,7 @@
                         <li><a href="rural.html">Rural Services</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="telehealth.html">TeleHealth</a></li>
-                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a></li>
+                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
                     </ul>
                 </nav>
                 <div class="hamburger-menu">
@@ -229,7 +229,7 @@
                         <p>At Allen Psychiatry, we understand that anxiety is more than just occasional nervousness; it can be an overwhelming and disruptive force in your life. That's why we're here at Allen Psychiatry: we provide comprehensive anxiety treatment.</p>
                     </div>
                     
-                    <p>If you want to learn more about treatment for anxiety, please call <strong>(385) 504-1334</strong> or <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients">schedule an appointment online</a>. We are here to help you through life's most difficult challenges.</p>
+                    <p>If you want to learn more about treatment for anxiety, please call <strong>(385) 504-1334</strong> or <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">schedule an appointment online</a>. We are here to help you through life's most difficult challenges.</p>
 
                     <h2>Understanding Anxiety</h2>
                     <h3>What is Anxiety?</h3>
@@ -345,7 +345,7 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="index.html#services">Services</a></li>
                         <li><a href="provo.html">Provo Office</a></li>
-                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a></li>
+                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">Schedule Appointment</a></li>
                     </ul>
                 </div>
