--- a/depression.html
+++ b/depression.html
@@ -162,7 +162,7 @@
                     <div>3311 North University Ave, Ste 275, Provo, UT 84604</div>
                 </div>
                 <div class="header-actions">
-                    <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a>
+                    <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a>
                     <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small" target="_blank">Schedule Now</a>
                 </div>
             </div>
@@ -190,7 +190,7 @@
                         <li><a href="rural.html">Rural Services</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="telehealth.html">TeleHealth</a></li>
-                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a></li>
+                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
                     </ul>
                 </nav>
                 <div class="hamburger-menu">
@@ -229,7 +229,7 @@
                         <p>Depression can feel overwhelming, but you don't have to go through it alone. Dr. Todd Allen offers expert evaluation and treatment for depression in a supportive and confidential environment.</p>
                     </div>
 
-                    <p>If you or a loved one is struggling with depression, please call <strong>(385) 504-1334</strong> or <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients">schedule an appointment online</a> today. We are here to help you rediscover hope and well-being.</p>
+                    <p>If you or a loved one is struggling with depression, please call <strong>(385) 504-1334</strong> or <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">schedule an appointment online</a> today. We are here to help you rediscover hope and well-being.</p>
 
                     <h2>Understanding Depression</h2>
                     <h3>What is Depression?</h3>
@@ -350,7 +350,7 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="index.html#services">Services</a></li>
                         <li><a href="provo.html">Provo Office</a></li>
-                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a></li>
+                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">Schedule Appointment</a></li>
                     </ul>
                 </div>
