--- a/rural.html
+++ b/rural.html
@@ -77,7 +77,7 @@
                     <div>3311 North University Ave, Ste 275, Provo, UT 84604</div>
                 </div>
                 <div class="header-actions">
-                    <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a>
+                    <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a>
                     <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small" target="_blank">Schedule Now</a>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                         <li><a href="rural.html" class="active">Rural Services</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="telehealth.html">TeleHealth</a></li>
-                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a></li>
+                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
                     </ul>
                 </nav>
                 <div class="hamburger-menu">
@@ -260,7 +260,7 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="index.html#services">Services</a></li>
                         <li><a href="provo.html">Provo Office</a></li>
-                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a></li>
+                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">Schedule Appointment</a></li>
                     </ul>
                 </div>
