--- a/anxiety.html
+++ b/anxiety.html
@@ -28,6 +28,7 @@
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="config.js"></script>
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
