Add office information back in clean, non-tile layout
- Add office information section with clean formatting
- Two-column grid layout for Office Features and Location & Accessibility
- Highlighted sections for Office Hours and Your First Visit
- Responsive design that stacks on mobile
- No tile styling - clean, professional layout

--- a/provo.html
+++ b/provo.html
@@ -133,6 +133,61 @@
         </div>
     </section>
 
+    <!-- Office Information Section -->
+    <section class="service-details">
+        <div class="container">
+            <div class="office-info-content">
+                <h2>Our Provo Office</h2>
+                <p class="location">3311 North University Ave, Ste 275, Provo, UT 84604</p>
+                
+                <p class="intro-text">Welcome to our Provo office, where every detail has been carefully considered to create a healing environment. From the moment you step through our doors, you'll experience a space that balances professionalism with warmth and comfort.</p>
+
+                <div class="info-grid">
+                    <div class="info-column">
+                        <h3>Office Features</h3>
+                        <ul>
+                            <li><strong>Welcoming Reception Area</strong> - A comfortable space where you can relax before your appointment</li>
+                            <li><strong>Private Consultation Rooms</strong> - Spacious, well-lit rooms designed for focused, confidential sessions</li>
+                            <li><strong>Accessible Facilities</strong> - ADA-compliant design with easy access for all patients</li>
+                            <li><strong>Complimentary Amenities</strong> - Free Wi-Fi, water, and coffee available in the waiting area</li>
+                            <li><strong>Secure Environment</strong> - Modern security systems ensuring your privacy and safety</li>
+                        </ul>
+                    </div>
+
+                    <div class="info-column">
+                        <h3>Location & Accessibility</h3>
+                        <ul>
+                            <li><strong>Convenient Parking</strong> - Free parking available directly in front of the building</li>
+                            <li><strong>Public Transportation</strong> - Easily accessible via public transit routes</li>
+                            <li><strong>Nearby Amenities</strong> - Close to restaurants, pharmacies, and other essential services</li>
+                            <li><strong>Building Access</strong> - Ground floor location with elevator access</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="office-hours-section">
+                    <h3>Office Hours</h3>
+                    <ul class="hours-list">
+                        <li><strong>Monday, Wednesday - Friday:</strong> 10:00 AM - 6:00 PM</li>
+                        <li><strong>Tuesday:</strong> 11:00 AM - 6:00 PM</li>
+                        <li><strong>Sunday:</strong> Closed</li>
+                    </ul>
+                    <p class="hours-note">We offer flexible scheduling options to accommodate your needs, including early morning and evening appointments when available.</p>
+                </div>
+
+                <div class="first-visit-section">
+                    <h3>Your First Visit</h3>
+                    <p>To make your first visit as smooth as possible, please:</p>
+                    <ul>
+                        <li>Arrive 15 minutes before your scheduled appointment</li>
+                        <li>Bring your insurance card and photo ID</li>
+                        <li>Complete any pre-visit paperwork sent to you</li>
+                        <li>Bring a list of current medications</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- CTA Section -->
     <section class="cta-section">
