Add debugging to SMS Privacy Policy modal to troubleshoot issue

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="header-actions">
                     <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a>
                     <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small" target="_blank">Schedule Now</a>
-                    <a href="#sms-privacy" onclick="showSmsPrivacyModal(); return false;" style="color: var(--primary); text-decoration: none; font-size: 0.9em; margin-left: 10px;">📱 SMS Policy</a>
+                    <a href="#sms-privacy" onclick="console.log('SMS Policy clicked'); showSmsPrivacyModal(); return false;" style="color: var(--primary); text-decoration: none; font-size: 0.9em; margin-left: 10px;">📱 SMS Policy</a>
                 </div>
             </div>
         </div>
