Test modal visibility - make modal always visible temporarily

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <a href="#" id="back-to-top-btn"><i class="fa fa-arrow-up"></i></a>
 
     <!-- SMS Privacy Policy Modal -->
-    <div id="smsPrivacyModal" class="sms-privacy-modal" style="display: none;">
+    <div id="smsPrivacyModal" class="sms-privacy-modal" style="display: block; position: fixed; top: 50px; left: 50px; z-index: 9999;">
         <div class="sms-privacy-modal-content">
             <div class="modal-header">
                 <h3>SMS Privacy Policy</h3>
