Create comprehensive SMS Privacy Policy modal
- Add detailed SMS privacy policy content
- Include information collection, usage, sharing policies
- Add user rights and opt-out instructions
- Include contact information and effective date
- Make modal scrollable for long content
- Professional formatting with clear sections

--- a/index.html
+++ b/index.html
@@ -207,59 +207,95 @@
     <a href="#" id="back-to-top-btn"><i class="fa fa-arrow-up"></i></a>
 
     <!-- SMS Privacy Policy Modal -->
-    <div id="smsPrivacyModal" class="sms-privacy-modal" style="display: block; position: fixed; top: 50px; left: 50px; z-index: 9999;">
+    <div id="smsPrivacyModal" class="sms-privacy-modal" style="display: none;">
         <div class="sms-privacy-modal-content">
             <div class="modal-header">
                 <h3>SMS Privacy Policy</h3>
                 <button class="modal-close" data-action="close-modal">&times;</button>
             </div>
             <div class="modal-body">
-                <h4>Information We Collect</h4>
-                <p>When you provide your phone number for SMS communications, we collect:</p>
-                <ul>
-                    <li>Your phone number</li>
-                    <li>Message delivery status</li>
-                    <li>Message content (appointment reminders, confirmations)</li>
-                    <li>Timestamps of communications</li>
-                </ul>
+                <div style="max-height: 70vh; overflow-y: auto; padding-right: 10px;">
+                    <h4>📱 SMS Privacy Policy</h4>
+                    <p><strong>Effective Date: January 2025</strong></p>
+                    
+                    <h5>Information We Collect</h5>
+                    <p>When you provide your phone number for SMS communications with Allen Psychiatry, we collect:</p>
+                    <ul>
+                        <li>Your phone number</li>
+                        <li>Message delivery status and timestamps</li>
+                        <li>Message content (appointment reminders, confirmations, practice updates)</li>
+                        <li>Your responses to our messages</li>
+                    </ul>
 
-                <h4>How We Use Your Information</h4>
-                <p>We use your phone number and SMS data to:</p>
-                <ul>
-                    <li>Send appointment reminders and confirmations</li>
-                    <li>Provide important practice updates</li>
-                    <li>Send treatment-related communications</li>
-                    <li>Improve our communication services</li>
-                </ul>
+                    <h5>How We Use Your Information</h5>
+                    <p>We use your phone number and SMS data exclusively to:</p>
+                    <ul>
+                        <li>Send appointment reminders and confirmations</li>
+                        <li>Provide important practice updates and notifications</li>
+                        <li>Send treatment-related communications when necessary</li>
+                        <li>Improve our communication services</li>
+                    </ul>
 
-                <h4>Information Sharing</h4>
-                <p>We do not sell, trade, or rent your phone number or SMS data to third parties. We may share information only:</p>
-                <ul>
-                    <li>With your explicit consent</li>
-                    <li>As required by law</li>
-                    <li>To protect our rights or safety</li>
-                </ul>
+                    <h5>Information Sharing</h5>
+                    <p><strong>We do not sell, trade, or rent your phone number or SMS data to third parties.</strong> We may share information only:</p>
+                    <ul>
+                        <li>With your explicit written consent</li>
+                        <li>As required by law or legal process</li>
+                        <li>To protect our rights, property, or safety, or that of our patients</li>
+                    </ul>
 
-                <h4>Data Security</h4>
-                <p>We implement appropriate security measures to protect your SMS data, including encryption and secure storage protocols.</p>
+                    <h5>Data Security</h5>
+                    <p>We implement appropriate technical and organizational security measures to protect your SMS data, including:</p>
+                    <ul>
+                        <li>Encryption of data in transit and at rest</li>
+                        <li>Secure storage protocols</li>
+                        <li>Limited access to authorized personnel only</li>
+                        <li>Regular security assessments and updates</li>
+                    </ul>
 
-                <h4>Your Rights</h4>
-                <p>You have the right to:</p>
-                <ul>
-                    <li>Opt out of SMS communications at any time</li>
-                    <li>Request access to your SMS data</li>
-                    <li>Request correction of inaccurate information</li>
-                    <li>Request deletion of your data (subject to legal requirements)</li>
-                </ul>
+                    <h5>Your Rights</h5>
+                    <p>You have the right to:</p>
+                    <ul>
+                        <li><strong>Opt out</strong> of SMS communications at any time by replying "STOP" to any message</li>
+                        <li><strong>Request access</strong> to your SMS data</li>
+                        <li><strong>Request correction</strong> of inaccurate information</li>
+                        <li><strong>Request deletion</strong> of your data (subject to legal and medical record retention requirements)</li>
+                        <li><strong>Withdraw consent</strong> at any time</li>
+                    </ul>
 
-                <h4>Contact Us</h4>
-                <p>For questions about this SMS Privacy Policy, contact us at:</p>
-                <p><strong>Allen Psychiatry</strong><br>
-                3311 North University Ave, Ste 275<br>
-                Provo, UT 84604<br>
-                Phone: (801) 555-0123</p>
+                    <h5>Message Frequency</h5>
+                    <p>Message frequency varies. You may receive:</p>
+                    <ul>
+                        <li>Appointment reminders (typically 24-48 hours before your appointment)</li>
+                        <li>Appointment confirmations</li>
+                        <li>Practice updates (infrequent)</li>
+                        <li>Treatment-related communications (as needed)</li>
+                    </ul>
 
-                <p><em>Last updated: January 2025</em></p>
+                    <h5>Opt-Out Instructions</h5>
+                    <p>To stop receiving SMS messages:</p>
+                    <ul>
+                        <li>Reply "STOP" to any message</li>
+                        <li>Call us at (801) 555-0123</li>
+                        <li>Email us at info@allenpsychiatry.net</li>
+                    </ul>
+
+                    <h5>Contact Information</h5>
+                    <p>For questions about this SMS Privacy Policy or to exercise your rights, contact us:</p>
+                    <p><strong>Allen Psychiatry</strong><br>
+                    3311 North University Ave, Ste 275<br>
+                    Provo, UT 84604<br>
+                    Phone: (801) 555-0123<br>
+                    Email: info@allenpsychiatry.net</p>
+
+                    <p style="margin-top: 20px; padding: 15px; background: #f0f8ff; border-left: 4px solid var(--primary); border-radius: 4px;">
+                        <strong>Note:</strong> This policy applies only to SMS communications. For our complete privacy policy regarding medical records and other information, please contact our office.
+                    </p>
+
+                    <p style="text-align: center; margin-top: 20px; font-size: 0.9em; color: #666;">
+                        <em>Last updated: January 2025 | Allen Psychiatry</em>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
