--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                 <p style="font-size: 0.85em; font-style: italic; margin-top: 10px; color: #888;"><strong>IMPORTANT!</strong> All information presented in this website is intended for informational purposes only and not for the purpose of rendering medical advice. Statements made on this website have not been evaluated by the Food and Drug Administration. The information contained herein is not intended to diagnose, treat, cure or prevent any disease.</p>
                 <p style="margin-top: 20px; font-size: 1.1em; font-weight: 600;">
                     <a href="#sms-privacy" data-action="show-sms-modal" onclick="showSmsPrivacyModal(); return false;" style="color: var(--primary); text-decoration: underline; background: #f0f8ff; padding: 8px 12px; border-radius: 4px; display: inline-block;">📱 SMS Privacy Policy</a>
+                    <button onclick="showSmsPrivacyModal();" style="margin-left: 10px; padding: 8px 12px; background: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer;">TEST MODAL</button>
                 </p>
             </div>
         </div>
