Remove SMS Privacy Policy from footer and change header text to white
- Remove SMS Privacy Policy button from footer
- Change header SMS Policy text color from blue to white
- Keep only the header SMS Policy link for cleaner design

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="header-actions">
                     <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a>
                     <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small" target="_blank">Schedule Now</a>
-                    <a href="#sms-privacy" data-action="show-sms-modal" onclick="showSmsPrivacyModal(); return false;" style="color: var(--primary); text-decoration: none; font-size: 0.9em; margin-left: 10px;">📱 SMS Policy</a>
+                    <a href="#sms-privacy" data-action="show-sms-modal" onclick="showSmsPrivacyModal(); return false;" style="color: white; text-decoration: none; font-size: 0.9em; margin-left: 10px;">📱 SMS Policy</a>
                 </div>
             </div>
         </div>
@@ -197,9 +197,6 @@
             <div class="footer-bottom">
                 <p>&copy; 2025 Allen Psychiatry. All Rights Reserved.</p>
                 <p style="font-size: 0.85em; font-style: italic; margin-top: 10px; color: #888;"><strong>IMPORTANT!</strong> All information presented in this website is intended for informational purposes only and not for the purpose of rendering medical advice. Statements made on this website have not been evaluated by the Food and Drug Administration. The information contained herein is not intended to diagnose, treat, cure or prevent any disease.</p>
-                <p style="margin-top: 20px; font-size: 1.1em; font-weight: 600;">
-                    <a href="#sms-privacy" data-action="show-sms-modal" onclick="showSmsPrivacyModal(); return false;" style="color: var(--primary); text-decoration: underline; background: #f0f8ff; padding: 8px 12px; border-radius: 4px; display: inline-block;">📱 SMS Privacy Policy</a>
-                </p>
             </div>
         </div>
     </footer>
