--- a/adhd.html
+++ b/adhd.html
@@ -8,7 +8,7 @@
     <title>ADHD Testing & Treatment Provo UT | Dr. Todd Allen | Allen Psychiatry</title>
     <meta name="title" content="ADHD Testing & Treatment Provo UT | Dr. Todd Allen | Allen Psychiatry">
     <meta name="description" content="Expert ADHD testing and treatment in Provo, UT. Dr. Todd Allen provides comprehensive ADHD evaluation, diagnosis, and medication management for adults and adolescents. Schedule your consultation today.">
-    <meta name="keywords" content="ADHD testing Provo UT, ADHD treatment Utah County, adult ADHD diagnosis, ADHD medication management, ADHD evaluation Provo, attention deficit hyperactivity disorder, Dr. Todd Allen ADHD">
+    <meta name="keywords" content="ADHD testing Provo, ADHD treatment Orem, ADHD evaluation Lehi, ADHD testing Spanish Fork, ADHD treatment American Fork, ADHD evaluation Springville, ADHD testing Pleasant Grove, ADHD treatment Payson, ADHD evaluation Saratoga Springs, ADHD testing Eagle Mountain, ADHD treatment Utah County, adult ADHD diagnosis, ADHD medication management, psychiatrist Provo, mental health clinic near me, psychiatric services Utah County, ADHD treatment Sevier County, rural ADHD treatment Utah">
     <meta name="author" content="Dr. Todd Allen, Allen Psychiatry">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
@@ -29,6 +29,15 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="config.js"></script>
+    
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LKYXFGGJSP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-LKYXFGGJSP');
+    </script>
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
@@ -74,13 +83,68 @@
             "name": "Attention Deficit Hyperactivity Disorder (ADHD)",
             "description": "A neurodevelopmental condition characterized by persistent patterns of inattention, hyperactivity, and impulsivity"
         },
-        "areaServed": {
-            "@type": "State",
-            "name": "Utah"
-        },
+        "areaServed": [
+            {
+                "@type": "City",
+                "name": "Provo",
+                "containedIn": {
+                    "@type": "State",
+                    "name": "Utah"
+                }
+            },
+            {
+                "@type": "City",
+                "name": "Orem",
+                "containedIn": {
+                    "@type": "State",
+                    "name": "Utah"
+                }
+            },
+            {
+                "@type": "City",
+                "name": "Lehi",
+                "containedIn": {
+                    "@type": "State",
+                    "name": "Utah"
+                }
+            },
+            {
+                "@type": "City",
+                "name": "Spanish Fork",
+                "containedIn": {
+                    "@type": "State",
+                    "name": "Utah"
+                }
+            },
+            {
+                "@type": "City",
+                "name": "American Fork",
+                "containedIn": {
+                    "@type": "State",
+                    "name": "Utah"
+                }
+            },
+            {
+                "@type": "State",
+                "name": "Utah"
+            },
+            {
+                "@type": "AdministrativeArea",
+                "name": "Utah County"
+            },
+            {
+                "@type": "AdministrativeArea",
+                "name": "Sevier County"
+            }
+        ],
         "serviceArea": {
-            "@type": "City",
-            "name": "Provo"
+            "@type": "GeoCircle",
+            "geoMidpoint": {
+                "@type": "GeoCoordinates",
+                "latitude": 40.2659,
+                "longitude": -111.6477
+            },
+            "description": "Serving Provo, Orem, Lehi, Spanish Fork, American Fork, Springville, Pleasant Grove, Payson, and rural Utah communities"
         },
         "availableChannel": {
             "@type": "ServiceChannel",
@@ -165,6 +229,7 @@
                 <div class="header-actions">
                     <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a>
                     <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small" target="_blank">Schedule Now</a>
+                    <a href="#sms-privacy" data-action="show-sms-modal" onclick="showSmsPrivacyModal(); return false;" style="color: white; text-decoration: none; font-size: 0.9em; margin-left: 10px;">📱 SMS Policy</a>
                 </div>
             </div>
         </div>
