--- a/telehealth.html
+++ b/telehealth.html
@@ -14,6 +14,15 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <script src="config.js"></script>
+    
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LKYXFGGJSP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-LKYXFGGJSP');
+    </script>
   </head>
   <body>
     <!-- Header -->
@@ -27,6 +36,7 @@
           <div class="header-actions">
             <a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a>
             <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn-small" target="_blank">Schedule Now</a>
+            <a href="#sms-privacy" data-action="show-sms-modal" onclick="showSmsPrivacyModal(); return false;" style="color: white; text-decoration: none; font-size: 0.9em; margin-left: 10px;">📱 SMS Policy</a>
           </div>
         </div>
       </div>
@@ -78,6 +88,9 @@
         <div class="container">
           <h1>TeleHealth Services</h1>
           <p>Convenient and confidential mental health care from anywhere</p>
+          <div class="hero-cta" style="margin-top: 30px;">
+            <a href="#" class="btn" onclick="showAppointmentClarification(); return false;">Schedule Appointment</a>
+          </div>
         </div>
       </section>
 
@@ -236,5 +249,6 @@
     <script src="telehealth-modal.js"></script>
     <script src="patient-portal-modal.js"></script>
     <script src="sms-privacy-modal.js"></script>
+    <script src="appointment-clarification-modal.js"></script>
 </body>
 </html> 
